# ERIS-API

./: .gitignore  ERIS_API.py  README.md  build_upload.bat  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
ERIS_API/: ERIS_API.py  ERIS_Parameters.py  ERIS_Responses.py  __init__.py  models.py  utils.py
ERIS_API/ERIS_API/: ERIS_API.py  ERIS_Responses.py  __init__.py
examples/: password_example.py  tag_list.json  token_example.py  util_examples.py
src/: ERIS_API.py  ERIS_Responses.py
src/ERIS_API/: ERIS_API.py  ERIS_Responses.py  __init__.py  utils.py
tests/: api_test.py  erisresponse_test.py  parameter_test.py  response_test.py
tests/fixtures/: json_response blank value.json  json_response.json  json_response_error_one_tag.json  json_response_no_data.json  xml_one_tag.xml  xml_one_tag_one_data.xml  xml_two_tag.xml  xml_two_tags_one_day.xml  xml_two_tags_one_error.xml
