[metadata]
# replace with your username:
name = ERIS-API
version = 1.0.6
author = Cody Scott
author_email = jcodyscott+ERIS@gmail.com
description = Python wrapper for the ERIS API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/namur007/ERIS-API
project_urls =
    Bug Tracker = https://github.com/namur007/ERIS-API/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

install_requires =
    requests
    pandas

[options.packages.find]
where = src